@@ -1,5 +1,9 @@
 2011-02-05 S. Thiell <stephane.thiell@cea.fr>
 
+	* Worker/Worker.py: Define new current_node, current_msg, current_errmsg
+	and current_rc Worker variables, updated at each event (last_read(),
+	last_node() and last_retcode() will be deprecated from version 2.0).
+
 	* Worker/*.py: Performance: removed _invoke() indirections when generating
 	events + local variables optimization.
 
